<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="note">Notes</string>
    <string name="addnote">Add Note</string>
    <string name="text">text</string>
    <string name="notename">Note Name</string>
    <string name="notesubject">Note Subject</string>
    <string name="notedetails">Note Details</string>
    <string name="deletenote">Delete Note</string>
    <string name="OtherNotes">Other Notes</string>
</resources>