<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:clickable="true"
    android:focusable="true"
    tools:context=".noteProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notedetails"
            android:textColor="#FFFFFF"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/notename"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/NameFragment"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#D4E79E"
            android:text="notename"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notesubject"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/PhoneFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/box"
            android:text="@string/notesubject"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/OtherNotes"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/relationshipList"
            android:layout_width="match_parent"
            android:layout_height="428dp"
            android:background="@color/relationbox">

        </ListView>

    </LinearLayout>

</RelativeLayout>